completed base style requirements for product card

--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
   <h1>Product Cards</h1>
   <div class="mainConainter">
     <div class="productCard">
-      <header>
-        <h2>Toilet Paper</h2>
-      </header>
-      <img class="productImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Toiletpapier_%28Gobran111%29.jpg/1200px-Toiletpapier_%28Gobran111%29.jpg" alt="toilet paper">
-      <p class="productDescription">Product Description Goes Here</p>
-      <p class="productAvail">Available or Not Avaliable</p>
-      <header>
-        <h3>Specifications</h3>
-      </header>
-      <p class="specificationsSize"> Size: 4"x4"</p>
-      <p class="specificationsSize"> Weight: 8oz.</p>
-      <footer>
-        <p class="specificationsFooter">Specifications valid until: </p>
-      </footer>
-      <header>
-        <h3>Pricing</h3>
-      </header>
-      <p class="priceP"> Qty 1:</p>
-      <p class="priceP"> Qty 2-10:</p>
-      <p class="priceP"> Qty 11-100</p>
+      <section class="firstSection">
+        <header>
+          <h2>Toilet Paper</h2>
+        </header>
+        <img class="productImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Toiletpapier_%28Gobran111%29.jpg/1200px-Toiletpapier_%28Gobran111%29.jpg" alt="toilet paper">
+        <p class="productDescription">Product Description Goes Here</p>
+        <p class="productAvail">Available or Not Avaliable</p>
+      </section>
+      <section class="secondSection">
+        <header>
+          <h3>Specifications</h3>
+        </header>
+       <p class="specificationsSize"> Size: 4"x4"</p>
+        <p class="specificationsSize"> Weight: 8oz.</p>
+        <footer>
+          <p class="specificationsFooter">Specifications valid until: </p>
+        </footer>
+      </section>
+      <section class="thirdSection">
+        <header>
+          <h3>Pricing</h3>
+        </header>
+        <p class="priceP"> Qty 1:</p>
+        <p class="priceP"> Qty 2-10:</p>
+        <p class="priceP"> Qty 11-100</p>
+      </section>
     </div>
   </div>
 
