--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Quarantine Essentials</h1>
-  <div class="mainConainter">
+  <div class="mainContainer">
     <div class="productCard">
       <section class="firstSection">
         <header>
