--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Size: 150 sheets</p>
+        <p class="specificationsSize"> Weight: Single Ply</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -55,10 +55,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Size: 33.8 fl oz</p>
+        <p class="specificationsSize"> Squirts: Roughly 300</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020 </p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -84,10 +84,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Weight: 1 lb</p>
+        <p class="specificationsSize"> Lean: 80/20</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -113,10 +113,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Size: 20 oz</p>
+        <p class="specificationsSize">Case: 24 bottles</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -142,10 +142,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize">Filter: Polypropylene</p>
+        <p class="specificationsSize">Prevents Virus: Undetermined</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -171,10 +171,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize">Size: S/M/L/XL</p>
+        <p class="specificationsSize">Material: Nitrile</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -200,10 +200,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Size: 15 oz</p>
+        <p class="specificationsSize"> Calories: 100 per serving</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -229,10 +229,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Size: 25.4 oz</p>
+        <p class="specificationsSize"> BAC: .17</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
@@ -258,10 +258,10 @@
         <header>
           <h3>Specifications</h3>
         </header>
-       <p class="specificationsSize"> Size: 4"x4"</p>
-        <p class="specificationsSize"> Weight: 8oz.</p>
+       <p class="specificationsSize"> Weight: 20 oz.</p>
+        <p class="specificationsSize"> Slices: 22</p>
         <footer>
-          <p class="specificationsFooter">Specifications valid until: </p>
+          <p class="specificationsFooter">Specifications valid until: 5/30/2020</p>
         </footer>
       </section>
       <section class="thirdSection">
