updated availability and added sold out stamp

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
           <h2>Toilet Paper</h2>
         </header>
         <img class="productImg" src="https://i.postimg.cc/RC1RppFy/tpfinal.jpg" alt="toilet paper">
+        <img class="soldOut" src="https://i.postimg.cc/Dzxn0Npv/soldouttrans.png" alt="soldout">
         <p class="productDescription">Toilet paper is a tissue paper product primarily used to clean the anus of feces after defecation. That's graphic. Thanks Wikipedia...</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Not Avaliable</p>
       </section>
       <section class="secondSection">
         <header>
@@ -48,8 +49,9 @@
           <h2>Hand Sanitizer</h2>
         </header>
         <img class="productImg" src="https://i.postimg.cc/xCN0TbkN/handsanitizerfinal.jpg" alt="hand sanitizer">
+        <img class="soldOut" src="https://i.postimg.cc/Dzxn0Npv/soldouttrans.png" alt="soldout">
         <p class="productDescription">Hand sanitizer is a liquid or gel used to decrease infectious agents on the hands. They are available as liquids, gels, and foams.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Not Avaliable</p>
       </section>
       <section class="secondSection">
         <header>
@@ -78,7 +80,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/N0P8TZd2/beeffinal.jpg" alt="ground beef">
         <p class="productDescription">Ground beef is beef that has been finely chopped with a knife or meat grinder. It's used in recipes including hamburgers and spaghetti.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
@@ -107,7 +109,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/XqhdB5xM/bottledwaterfinal.jpg" alt="bottled water">
         <p class="productDescription">Bottled Water is essential to surviving an extended quarantine. You will be tempted to drink only wine, but remember to stay hydrated.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
@@ -135,8 +137,9 @@
           <h2>Face Masks</h2>
         </header>
         <img class="productImg" src="https://i.postimg.cc/yNGThG75/facemaskfinal.jpg" alt="Face Masks">
+        <img class="soldOut" src="https://i.postimg.cc/Dzxn0Npv/soldouttrans.png" alt="soldout">
         <p class="productDescription">A face mask is a device designed to protect the wearer from inhaling hazardous atmospheres, including fumes, gases and coronavirus.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Not Avaliable</p>
       </section>
       <section class="secondSection">
         <header>
@@ -165,7 +168,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/bwccg6wZ/glovesfinal.jpg" alt="gloves">
         <p class="productDescription">Gloves are traditionally used by people cleaning in the home and are popular with professional cleaners and for cleaning up in shops.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
@@ -194,7 +197,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/q7GrDWmm/cannedfinal.jpg" alt="Canned Goods">
         <p class="productDescription">Canned goods have a shelf life typically ranging from one to five years, although under specific circumstances it can be much longer. </p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
@@ -223,7 +226,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/qBt4J6tx/winefinal.jpg" alt="wine">
         <p class="productDescription">Wine is an alcoholic drink made of fermented grapes. Different types of grapes and strains of yeasts produce different styles of wine.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
@@ -252,7 +255,7 @@
         </header>
         <img class="productImg" src="https://i.postimg.cc/8cGNyNGn/breadfinal.jpg" alt="Bread">
         <p class="productDescription">Bread is a staple food prepared from a dough of flour and water, by baking. Through history it has been a prominent food in the world.</p>
-        <p class="productAvail">Available or Not Avaliable</p>
+        <p class="productAvail">Available</p>
       </section>
       <section class="secondSection">
         <header>
